--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,8 @@
 \usepackage{geometry}
 \geometry{left=1in,right=1in,top=1in,bottom=1in} % Adjust margins as needed
 \usepackage{enumitem} % For customizable lists
-\setlist[itemize]{leftmargin=*} % No extra indentation for itemize
+\setlist[itemize, 1]{leftmargin=0pt} % No indentation for first level of itemize
+\setlist[itemize]{label={}} % Empty label for bullet list
 \usepackage{fontawesome5} % For social media icons
 \usepackage{hyperref} % For clickable links
 \hypersetup{
@@ -41,7 +42,7 @@
     {\Huge \bfseries Rafael C. Giménez} \\
     \vspace{3pt}
     \normalsize
-    MSc Artificial Intelligence | Biomedical Engineer \\
+    MSc Artificial Intelligence $|$ Biomedical Engineer \\
     \vspace{5pt}
     \color{textgray}
     \href{mailto:rafael.cga@proton.me}{rafael.cga@proton.me} $|$ Madrid, Spain \\
