Changes to sections and awards

--- a/main.tex
+++ b/main.tex
@@ -65,7 +65,7 @@
     \vspace{-1cm} % Adjust vertical spacing as needed
     \color{headerblue}
     {\Huge \bfseries Rafael C. Giménez} \\
-    \vspace{3pt}
+    \vspace{5pt}
     \normalsize
     MSc Artificial Intelligence $|$ Biomedical Engineer \\
     \vspace{5pt}
@@ -80,6 +80,7 @@
 \section*{Summary}
 \vspace{5pt}
 \color{textgray}
+% TODO: Poner intereses
 Rafael C. Giménez is an AI and Biomedical Engineer with expertise in Medical Imaging and Computer Vision. He holds an MSc in AI and a BE in Biomedical Engineering. His research experience includes nanoparticle characterization and biomedical image analysis using AI at Universidad Politécnica de Madrid, Natural Language Processing at Hospital 12 de Octubre, and X-Ray Computed Tomography algorithms at Universidad Carlos III de Madrid. He also has experience as an Assistant Professor and has published in both high-impact Medical Imaging journals and Biomedical Engineering congresses.
 
 % --- EDUCATION ---
@@ -132,6 +133,13 @@ Rafael C. Giménez is an AI and Biomedical Engineer with expertise in Medical Im
         Del Cerro, C. F., \textcolor{darkgray}{\textbf{Giménez, R. C.}}, García-Blas, J., Sosenko, K., Ortega, J. M., Desco, M., \& Abella, M.
         \\ \textit{Journal of Imaging Informatics in Medicine}
         \\ \href{https://doi.org/10.1007/s10278-024-01256-x}{10.1007/s10278-024-01256-x}
+\end{itemize}
+
+% --- CONGRESSES ---
+\section*{Congresses}
+\vspace{5pt}
+\color{textgray}
+\begin{itemize}
     \dateitem{\textbf{Reconocimiento Automático de Posiciones Radiográficas en Radiología}}{Nov 2021}
         \textcolor{darkgray}{\textbf{Giménez, R. C.}}, Del Cerro, C. F., Sosenko, K., Desco, M., García-Blas, J., \& Abella, M.
         \\ \textit{CASEIB 2021: XXXIX Congreso Anual de La Sociedad Española de Ingeniería Biomédica}
@@ -141,6 +149,23 @@ Rafael C. Giménez is an AI and Biomedical Engineer with expertise in Medical Im
     \dateitem{\textbf{Corrección del Artefacto de Truncamiento en TAC mediante Aprendizaje profundo}}{Nov 2020}
         Berdón, P. M., Del Cerro, C. F., \textcolor{darkgray}{\textbf{Giménez, R. C.}}, Desco, M., \& Abella, M.
         \\ \textit{CASEIB 2020: XXXVIII Congreso Anual de La Sociedad Española de Ingeniería Biomédica}
+\end{itemize}
+
+% --- AWARDS & CERTIFICATIONS ---
+\section*{Awards \& Certifications}
+\vspace{5pt}
+\color{textgray}
+\begin{itemize}
+    \dateitem{\textbf{Madrid Community Excellence Scholarship (2020/2021)}}{Jul 2021}
+        Consejería de Ciencia, Universidades e Innovación de la Comunidad de Madrid
+    \dateitem{\textbf{IELTS Academic}, 8.0/9.0}{Dec 2020}
+        Cambridge English
+    \dateitem{\textbf{Collaboration Scholarship at the Department of Bioengineering and Aerospace Engineering (UC3M)}}{Nov 2020}
+        Ministerio de Educación y Formación Profesional
+    \dateitem{\textbf{Madrid Community Excellence Scholarship (2019/2020)}}{Jan 2020}
+        Consejería de Ciencia, Universidades e Innovación de la Comunidad de Madrid
+    \dateitem{\textbf{First Certificate in English}, Band A (C1)}{Dec 2015}
+        Cambridge English
 \end{itemize}
 
 % --- SKILLS ---
