--- a/main.tex
+++ b/main.tex
@@ -82,7 +82,7 @@
 \color{textgray}
 Rafael C. Giménez is an AI and Biomedical Engineer with expertise in Medical Imaging and Computer Vision. He holds an MSc in AI and a BE in Biomedical Engineering. His research experience includes nanoparticle characterization and biomedical image analysis using AI at Universidad Politécnica de Madrid, Natural Language Processing at Hospital 12 de Octubre, and X-Ray Computed Tomography algorithms at Universidad Carlos III de Madrid. He also has experience as an Assistant Professor and has published in both high-impact Medical Imaging journals and Biomedical Engineering congresses.
 
-Eager to transition from academia, he seeks to apply his research foundation and analytical skills to real-world challenges within an enterprise environment, actively contributing to and learning from collaborative teams.
+He seeks to apply his academic research foundation and analytical skills to real-world challenges within an enterprise environment, actively contributing to and learning from collaborative teams.
 
 % --- EDUCATION ---
 \section*{Education}
