--- a/main.tex
+++ b/main.tex
@@ -80,9 +80,7 @@
 \section*{Summary}
 \vspace{5pt}
 \color{textgray}
-Rafael C. Giménez is an AI and Biomedical Engineer with expertise in Medical Imaging and Computer Vision. He holds an MSc in AI and a BE in Biomedical Engineering. His research experience includes nanoparticle characterization and biomedical image analysis using AI at Universidad Politécnica de Madrid, Natural Language Processing at Hospital 12 de Octubre, and X-Ray Computed Tomography algorithms at Universidad Carlos III de Madrid. He also has experience as an Assistant Professor and has published in both high-impact Medical Imaging journals and Biomedical Engineering congresses.
-
-He seeks to apply his academic research foundation and analytical skills to real-world challenges within an enterprise environment, actively contributing to and learning from collaborative teams.
+AI and Biomedical Engineer with a strong foundation in Medical Imaging and Computer Vision. I hold an MSc in AI and a BE in Biomedical Engineering. My research expertise spans nanoparticle characterization, biomedical image analysis (AI-driven), Natural Language Processing, and X-Ray Computed Tomography algorithms, gained at leading institutions like Universidad Politécnica de Madrid, Hospital 12 de Octubre, and Universidad Carlos III de Madrid. As a published author in high-impact medical imaging journals and biomedical engineering congresses, and with experience as an Assistant Professor, I'm eager to leverage my analytical skills and academic research to tackle real-world challenges within a collaborative enterprise environment.
 
 % --- EDUCATION ---
 \section*{Education}
